data/derived/fa15/progs/unify/prog2898.ml.out
Characters 55-65:
  (n mod 10) @ digitsOfIntHelper (n - (n  mod 10)/10);;
  ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
